wwr/styles/style.css
#content{
    max-width: 1600px;
    margin: 0 auto;
}

nav a{
    text-align: center;
    color: #343236;
    text-decoration: none;
} 

nav a:hover{
    background-color: #355834;
    color: #E1EFF6;
}

#hero-msg h1{
    text-align: center;
} 

#hero-msg h2{
    text-align: center;
} 

#hero-img{
    width: 100%;
}

.button-box{
    text-align: center;
}

main section{
    text-align: center;
}

#background{
    height: 725px;
    background-color: #355834;
}

body{
    background-color: #355834;
}

header{
    background-color: #BCD39C;
} 

.book, .join{
    background-color: #355834;
    color: #E1EFF6;
    text-decoration: none;
} 

.book:hover, .join:hover{
    background-color: #BCD39C;
    color: #343236;
}

.msg{
    background-color: #355834;
}

.home-title{
    color: #E1EFF6;
}

h4{
    color: #E1EFF6;
}

.msg h2{
    color: #E1EFF6;
}

.msg p{
    color: #E1EFF6;
}

footer{
    background-color: #BCD39C;
}

footer h3{
    color: #343236;
}

footer a{
    color: #343236;
    text-decoration: none;
}

footer a:hover{
    background-color: #355834;
    color: #E1EFF6;
}

footer h3 a:hover{
    text-decoration: underline;
}

.logo{
    width: 80px;
}

.icon{
    width: 80px;
}

